--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
   assets:
     - assets/images/pan.png
     - assets/images/adharr.webp
+    - assets/images/adharr.png
+    - assets/images/adharr.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
